poky/meta-vicos/recipes-extended/iptables-persistent/files/ip6tables-user.rules
*filter

# default deny incoming traffic
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

#drop invalid packets on the ground
-A INPUT -m conntrack --ctstate INVALID -j DROP

# Allow inbound responses to outgoing traffic
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Accept traffic on localhost
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A INPUT -s ::1 -d ::1 -j ACCEPT
-A OUTPUT -s ::1 -d ::1 -j ACCEPT

# Accept all OUTPUT
-A OUTPUT -p ALL -o wlan0 -j ACCEPT

# Allow ping
-A INPUT -p ipv6-icmp -j ACCEPT
-A OUTPUT -p ipv6-icmp -j ACCEPT

COMMIT
