poky/meta-vicos/recipes-extended/iptables-persistent/files/iptables-user.rules
*filter

# default deny incoming traffic
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

#drop invalid packets on the ground
-A INPUT -m conntrack --ctstate INVALID -j DROP

# Allow inbound responses to outgoing traffic
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Accept traffic on localhost
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# Accept all OUTPUT
-A OUTPUT -p ALL -o wlan0 -j ACCEPT
-A OUTPUT -p ALL -o tether -j ACCEPT

# Accept DHCP traffic (Access Point mode)
-A INPUT -p udp -m udp --dport 67 -i tether -j ACCEPT

# Allow ping
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT

COMMIT
